# jutils

./: .gitignore  CMakeLists.txt  LICENSE  int_defines.h  jarray.h  jdelegate.h  jdelegate_multicast.h  jhash_table.h  jhash_table_chain.h  jhash_table_open.h  jheap_allocator.h  jlist.h  jlist_allocator.h  jlog.cpp  jlog.h  jmap.h  jmap_hash.h  jmap_pair.h  jpool_allocator.h  jset.h  jset_hash.h  jstack_allocator.h  jstring.h  jstringID.h  jstring_hash_table.h  jtree_red_black.h  juid.h  type_defines.h
include/: jdelegate_multicast.h  jhash_table_open.h  jlist.h  jlog.h  jmemory.h  jpool.h  jset.h  jset_hash.h  jshared_ptr.h  jstringID.h  juid.h
include/jutils/: base_types.h  bitvector.h  core.h  defer.h  delegate.h  delegate_multicast.h  delegate_single.h  format.h  hash_map.h  hash_set.h  jarray.h  jasync_task_queue.h  jdefer.h  jdelegate.h  jdelegate_multicast.h  jdeque.h  jdescriptor_table.h  jhash_table_chain.h  jheap_allocator.h  jlist.h  jlist_allocator.h  jlog.h  jmap.h  jmap_hash.h  jmemory.h  jpool.h  jpool_pointer.h  jpool_simple.h  jpool_simple_async.h  jset.h  jset_hash.h  jshared_ptr.h  jstring.h  jstringID.h  jtask_queue.h  jtree_red_black.h  juid.h  list.h  log.h  macro_args_count.h  (+15 more)
include/jutils/configs/: ini.h  ini_parser.h  json.h  json_parser.h
include/jutils/json/: json.h  json_parser.h
include/jutils/macro/: args_count.h  delegate.h  formatter.h  if_has_args.h  log.h  template_condition.h  wrap.h
include/jutils/math/: box2.h  box3.h  common.h  format_glm.h  hash.h  mat2x2.h  mat2x3.h  mat2x4.h  mat3x2.h  mat3x3.h  mat3x4.h  mat4x2.h  mat4x3.h  mat4x4.h  mat_base.h  math.h  math_matrix.h  math_matrixTransform.h  math_vector.h  matrix2.h  matrix2x3.h  matrix2x4.h  matrix3.h  matrix3x2.h  matrix3x4.h  matrix4.h  matrix4x2.h  matrix4x3.h  vec2.h  vec3.h  vec4.h  vec_base.h  vector2.h  vector3.h  vector4.h
include/jutils/math/base_types/: box2_base.h  box3_base.h  box_base.h  box_operations.h  matrix2_base.h  matrix2x2_base.h  matrix2x3_base.h  matrix2x4_base.h  matrix3_base.h  matrix3x2_base.h  matrix3x3_base.h  matrix3x4_base.h  matrix4_base.h  matrix4x2_base.h  matrix4x3_base.h  matrix4x4_base.h  matrix_base.h  matrix_operations.h  vector2_base.h  vector3_base.h  vector4_base.h  vector_base.h  vector_operations.h
include/jutils/modules/: base_types.cppm  delegate.cppm  format.cppm  list.cppm  log.cppm  map.cppm  math.cppm  set.cppm  string.cppm  type_traits.cppm  vector.cppm
include/math/: math_vector.h
include/math/base_types/: matrix3x3_base.h  matrix4x3_base.h  vector_base.h
jutils/: jarray.h  jlist.h  jlog.cpp  jmap.h  jmath.h  jpool.h  jpool_allocator.h  jset.h  jstack_allocator.h  juid.h  type_checks.h  type_defines.h
jutils/math/: jhash.h  jmath.h  jmath_matrix.h  jmath_vector.h  matrix2.h  matrix2x2.h  matrix4.h  vector2.h  vector2_base.h  vector3.h  vector3_base.h  vector4.h  vector4_base.h  vector_base.h
jutils/math/base_types/: matrix2x2_base.h  matrix2x3_base.h  matrix2x4_base.h  matrix3x2_base.h  matrix3x3_base.h  matrix4x2_base.h  matrix4x3_base.h  matrix_base.h  matrix_operations.h  vector2_base.h  vector3_base.h  vector4_base.h
math/: hash.h  jmath_matrix.h  jmath_vector.h  math_vector.h  matrix2x3.h  matrix4x3.h  vector3.h
math/base_types/: matrix2x3_base.h  matrix3x2_base.h  matrix3x4_base.h  matrix4x2_base.h  matrix_operations.h  vector2_base.h  vector3_base.h  vector4_base.h
src/configs/: ini_parser.cpp  json_parser.cpp
src/json/: json_parser.cpp
